Criei ex004 JavaScript

--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -17,9 +17,8 @@
    <h1>Olá, Mundo !</h1>
    <p>Ja me livrei da maldição</p>
    <script>
-    window.alert('Minha primeira mensagem') // teste de comentário...
-    window.confirm('Esta gostando ?')
-    window.prompt('Qual o seu nome ?')
+   var nome = window.prompt('Qual o seu nome ?')
+   window.alert("É um grande prazer te conhecer," + nome + "!")
    </script>
 </body>
 </html>
