--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -17,9 +17,10 @@
    <h1>Olá, Mundo !</h1>
    <p>Ja me livrei da maldição</p>
    <script>
-    window.alert('Minha primeira mensagem') // teste de comentário...
-    window.confirm('Esta gostando ?')
-    window.prompt('Qual o seu nome ?')
+    var n1 = Number(window.prompt("Informe um numero, "))
+    var n2 = Number(window.prompt("Informe outro numero, "))
+    var s = n1 + n2 
+    window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
    </script>
 </body>
 </html>
